--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "react-native-expo-2024-",
     "slug": "react-native-expo-2024-",
+    "scheme": "react-native-expo-2024-r",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/icon.png",
